--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -3,12 +3,40 @@
 <head>
     <title>CRM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <style>
+		
+		#logo{
+		}
 
+		body{
+			background-color: #ebeff5;
+		}
+
+
+		#total-orders{
+			background-color: #4cb4c7;
+		}
+
+
+		#orders-delivered{
+			background-color: #7abecc;
+		}
+
+		#orders-pending{
+			background-color: #7CD1C0;
+		}
+
+
+
+
+	</style>
 </head>
 <body>
     {% include "accounts/navbar.html" %}
+    <div class="container-fluid">
     {% block content %}
     {% endblock %}
+    </div>
     <hr>
     <h5>шапка</h5>
 </body>
