--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -5,26 +5,26 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Customer:</h5>
+			<h5>Клиент:</h5>
 			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="">Обновить данные</a>
+			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Удалить клиента</a>
 
 		</div>
 	</div>
 
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Contact Information</h5>
+			<h5>Контакты</h5>
 			<hr>
-			<p>Email: </p>
-			<p>Phone: </p>
+			<p>Электронная почта: </p>
+			<p>Телефон: </p>
 		</div>
 	</div>
 
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Total Orders</h5>
+			<h5>Всего заказов</h5>
 			<hr>
 			<h1 style="text-align: center;padding: 10px"></h1>
 		</div>
@@ -38,7 +38,7 @@
 		<div class="card card-body">
 			<form method="get">
 
-		    <button class="btn btn-primary" type="submit">Search</button>
+		    <button class="btn btn-primary" type="submit">Поиск</button>
 		  </form>
 		</div>
 	</div>
@@ -51,12 +51,12 @@
 		<div class="card card-body">
 			<table class="table table-sm">
 				<tr>
-					<th>Product</th>
-					<th>Category</th>
-					<th>Date Orderd</th>
-					<th>Status</th>
-					<th>Update</th>
-					<th>Remove</th>
+					<th>Товар</th>
+					<th>Категория</th>
+					<th>Дата заказа</th>
+					<th>Статус</th>
+					<th>Обновление</th>
+					<th>Удаление</th>
 				</tr>
 
 			</table>
