--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -4,35 +4,52 @@
 <br>
 <div class="row">
 	<div class="col-md-5">
-		<h5>CUSTOMERS:</h5>
+		<h5>Клиенты:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="">Создать клиента</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
-					<th>Customer</th>
-					<th>Orders</th>
+					
+					<th>Клиент</th>
+					<th>Телефон</th>
 				</tr>
+				{% for customer in customers %}
+					<tr>
+						<td>{{ customer.name }}</td>
+						<td>{{ customer.phone }}</td>
+					</tr>
+
+					{% endfor %}
 
 			</table>
 		</div>
 	</div>
 
 	<div class="col-md-7">
-		<h5>LAST 5 ORDERS</h5>
+		<h5>Последние 5 заказов</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="">Создать заказ</a>
 			<table class="table table-sm">
 				<tr>
-					<th>Product</th>
-					<th>Date Orderd</th>
-					<th>Status</th>
-					<th>Update</th>
-					<th>Remove</th>
+					<th>Продукция</th>
+					<th>Дата заказа</th>
+					<th>Статус</th>
+					<th>Обновить</th>
+					<th>Удалить</th>
 				</tr>
-		
+					{% for order in orders %}
+					<tr>
+						<td>{{ order.product }}</td>
+						<td>{{ order.date_created }}</td>
+						<td>{{ order.status }}</td>
+						<td><a href="#">Обновление</a></td>
+						<td><a href="#">Удаление</a></td>
+					</tr>
+
+					{% endfor %}
+
 			</table>
 		</div>
 	</div>
