--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -4,16 +4,22 @@
 <div class="row">
     <div class="col-md">
         <div class="card card-body">
-            <h5>Products</h5>
+            <h5>Товары</h5>
         </div>
         <div class="card card-body">
             <table class="table">
                 <tr>
-                    <th>Product</th>
-                    <th>Category</th>
-                    <th>Price</th>
+                    <th>Товар</th>
+                    <th>Категория</th>
+                    <th>Цена</th>
                 </tr>
-                
+                {% for i in products %}
+                    <tr>
+                    <td>{{ i.name }}</td>
+                    <td>{{ i.category }}</td>
+                    <td>{{ i.price }}</td>
+                    </tr>
+                {% endfor %}
             </table>
         </div>
     </div>  
