--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -5,7 +5,7 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Клиент:</h5>
+			<h5>Клиент: {{ customer.name }}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Обновить данные</a>
 			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Удалить клиента</a>
@@ -17,8 +17,8 @@
 		<div class="card card-body">
 			<h5>Контакты</h5>
 			<hr>
-			<p>Электронная почта: </p>
-			<p>Телефон: </p>
+			<p>Электронная почта: {{ customer.email }}</p>
+			<p>Телефон: {{ customer.phone }}</p>
 		</div>
 	</div>
 
@@ -26,7 +26,7 @@
 		<div class="card card-body">
 			<h5>Всего заказов</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px"></h1>
+			<h1 style="text-align: center;padding: 10px">{{ orders_count }}</h1>
 		</div>
 	</div>
 </div>
@@ -57,6 +57,20 @@
 					<th>Статус</th>
 					<th>Обновление</th>
 					<th>Удаление</th>
+				</tr>
+				{% for order in orders %}
+				<tr>
+					<td>{{ order.product }}</td>
+					<td>{{ order.product.category }}</td>
+					<td>{{ order.date_created }}</td>
+					<td>{{ order.status }}</td>
+					<td><a class="btn btn-sm btn-info" href="#">Обнавить</a></td>
+					<td><a class="btn btn-sm btn-danger" href="#">Удаление</a></td>
+				</tr>
+
+				{% endfor %}
+				<tr>
+
 				</tr>
 
 			</table>
