--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -30,7 +30,7 @@
 		<h5>Последние 5 заказов</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Создать заказ</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}">Создать заказ</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Продукция</th>
