--- a/accounts/templates/accounts/order_form.html
+++ b/accounts/templates/accounts/order_form.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 <form action="" method="POST">
+    {% csrf_token %}
+    {{ form }}
     <input type="submit" name="Submit">
 </form>
 {% endblock %}
