create method delete order

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -46,7 +46,7 @@
 						<td>{{ order.date_created }}</td>
 						<td>{{ order.status }}</td>
 						<td><a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'update_order' order.id %}">Обновление</a></td>
-						<td><a class="btn btn-outline-danger  btn-sm btn-block" href="#">Удаление</a></td>
+						<td><a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'delete_order' order.id %}">Удаление</a></td>
 					</tr>
 
 					{% endfor %}
