--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -64,8 +64,8 @@
 					<td>{{ order.product.category }}</td>
 					<td>{{ order.date_created }}</td>
 					<td>{{ order.status }}</td>
-					<td><a class="btn btn-sm btn-info" href="#">Обнавить</a></td>
-					<td><a class="btn btn-sm btn-danger" href="#">Удаление</a></td>
+					<td><a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'update_order' order.id %}">Обновление</a></td>
+					<td><a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'delete_order' order.id %}">Удаление</a></td>
 				</tr>
 
 				{% endfor %}
