--- a/accounts/templates/accounts/order_form.html
+++ b/accounts/templates/accounts/order_form.html
@@ -2,12 +2,16 @@
 {% load static %}
 {% block content %}
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-10">
         <div class="card card-body">
 
 <form action="" method="POST">
     {% csrf_token %}
-    {{ form }}
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{ form }}
+    <hr>
+    {% endfor %}
     <input type="submit" name="Submit">
 </form>
 </div>
