--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -37,6 +37,7 @@
 	<div class="col">
 		<div class="card card-body">
 			<form method="get">
+				{{ myfilter.form }}
 
 		    <button class="btn btn-primary" type="submit">Поиск</button>
 		  </form>
