--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -56,6 +56,7 @@
 					<th>Категория</th>
 					<th>Дата заказа</th>
 					<th>Статус</th>
+					<th>Примечания</th>
 					<th>Обновление</th>
 					<th>Удаление</th>
 				</tr>
@@ -65,6 +66,7 @@
 					<td>{{ order.product.category }}</td>
 					<td>{{ order.date_created }}</td>
 					<td>{{ order.status }}</td>
+					<td>{{ order.note }}</td>
 					<td><a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'update_order' order.id %}">Обновление</a></td>
 					<td><a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'delete_order' order.id %}">Удаление</a></td>
 				</tr>
