--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,5 +1,13 @@
 {% load static %}
 
+<style>
+  .hello-msg{
+    font-size: 18px;
+    color: #fff;
+    margin-right: 30px;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,4 +25,6 @@
         
     </ul>
     </div>
+    <span class='hello-msg'>Добро пожаловть, {{ request.user }}</span>
+    <span><a class='hello-msg' href="{% url 'logout' %}">Выход</a></span>
   </nav>
