--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -16,13 +16,14 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        {% if request.user.is_staff %}
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Панель управления</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Товары</a>
         </li>
-        
+        {% endif %}
     </ul>
     </div>
     <span class='hello-msg'>Добро пожаловть, {{ request.user }}</span>
