--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -24,6 +24,9 @@
           <a class="nav-link" href="{% url 'products' %}">Товары</a>
         </li>
         {% endif %}
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'account' %}">Настройки</a>
+        </li>
     </ul>
     </div>
     <span class='hello-msg'>Добро пожаловть, {{ request.user }}</span>
