--- a/accounts/templates/accounts/account_settings.html
+++ b/accounts/templates/accounts/account_settings.html
@@ -19,17 +19,18 @@
 			<hr>
 			<h3 style="text-align: center">Настройка аккаунта</h3>
 			<hr>
-			<img class="profile-pic" src="" >
-		
+			<img class="profile-pic" src="{{ request.user.customer.profile_pic.url }}" >
+
 		</div>
 	</div>
 	<div class="col-md-9">
 		<div class="card card-body">
-			
-			<form method="POST" action="" enctype="multipart/form-data">
+
+			<form method="POST" >
 				{% csrf_token %}
-				
-		
+				{{ form.as_p }}
+
+
 			<input class="btn btn-primary" type="submit" name="Update Information">
 			</form>
 		</div>
